# my-girl-friday

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
my_girl_friday/: __init__.py  __main__.py  server.py
