[project]
name = "my-girl-friday"
version = "0.1.0"
description = "MCP server for Microsoft Outlook integration - Your AI assistant for email, calendar, and tasks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jordan Ehrig", email = "jordan@ebic.consulting"}
]
keywords = ["mcp", "outlook", "email", "microsoft", "graph", "ai", "assistant"]

dependencies = [
    "mcp>=1.1.0",
    "msal>=1.31.0",
    "msgraph-sdk>=1.12.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
]

[project.urls]
Repository = "https://github.com/SamuraiBuddha/my-girl-friday"
Issues = "https://github.com/SamuraiBuddha/my-girl-friday/issues"

[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["my_girl_friday"]

[project.scripts]
my-girl-friday = "my_girl_friday.__main__:main"
